Refactor admin API and frontend for improved DTO handling
Replaces custom record DTOs in AdminApiController with generic Map-based responses for subjects, teachers, students, remarks, and grades. Updates frontend admin.js to support new DTO formats and adds filtering to grades and attendance views. Adds user details endpoint, school class update method, and improves grade saving logic. Cleans up comments and streamlines code for maintainability.